[gd_scene load_steps=13 format=2]

[ext_resource path="res://Img/BG_Pause.png" type="Texture" id=1]
[ext_resource path="res://Scene/ScreenPause.gd" type="Script" id=2]
[ext_resource path="res://Img/Font/Titre.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.701961, 0, 0.733333, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.447059, 0, 0.470588, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.956863, 0, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.701961, 0, 0.733333, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.447059, 0, 0.470588, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.956863, 0, 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.701961, 0, 0.733333, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.447059, 0, 0.470588, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.956863, 0, 1, 1 )

[node name="ScreenPause" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="BG_Pause" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="BT_Continuer" type="Button" parent="."]
margin_left = 768.0
margin_top = 256.0
margin_right = 1152.0
margin_bottom = 384.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "CONTINUER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BT_Quit" type="Button" parent="."]
margin_left = 768.0
margin_top = 768.0
margin_right = 1152.0
margin_bottom = 896.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "QUITTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BT_Menu" type="Button" parent="."]
margin_left = 768.0
margin_top = 512.0
margin_right = 1152.0
margin_bottom = 640.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "MENU PRINCIPAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titre" type="Sprite" parent="."]
position = Vector2( 960, 104 )
scale = Vector2( 1.375, 1.375 )
texture = ExtResource( 3 )

[connection signal="pressed" from="BT_Continuer" to="." method="_on_BT_Continuer_pressed"]
[connection signal="pressed" from="BT_Quit" to="." method="_on_BT_Quit_pressed"]
[connection signal="pressed" from="BT_Menu" to="." method="_on_BT_Menu_pressed"]
